Introduced utils and move all constants message in AppConstants