@@ -7,8 +7,8 @@ import com.movieflix.exceptions.FileExistsException;
 import com.movieflix.exceptions.MovieNotFoundException;
 import com.movieflix.repositories.MovieRepository;
 
+import com.movieflix.utils.AppConstants;
 import lombok.extern.slf4j.Slf4j;
-import org.slf4j.*;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -18,7 +18,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Slf4j
@@ -40,11 +39,12 @@ public class MovieServiceImpl implements MovieService{
     @Override
     public MovieDto addMovie(MovieDto movieDto, MultipartFile file) throws IOException {
         if(file.isEmpty()){
-            throw new EmptyFileException("File not uploaded");
+            throw new EmptyFileException(AppConstants.FILE_NOT_UPLOADED_MSG);
         }
 
         if(Files.exists(Paths.get(path+ File.separator + file.getOriginalFilename()))){
-            throw new FileExistsException("File already exists with id = " + movieDto.getId());
+            throw new FileExistsException(
+                    String.format(AppConstants.FILE_ALREADY_EXISTS_WITH_FILE_NAME, file.getOriginalFilename()));
         }
         // upload the file
         String uploadedFileName = fileService.uploadFile(path, file );
@@ -78,10 +78,15 @@ public class MovieServiceImpl implements MovieService{
     @Override
     public MovieDto getMovie(Integer movieId) {
         // check the data in db and if exists fetch the data
-        Movie movie = movieRepository.findMovieByIdAndIsDeleted(movieId, Boolean.FALSE)
-                .orElseThrow(()-> new MovieNotFoundException("Movie not found with id = " + movieId));
+        Movie movie = getMovieById(movieId);
 
         return convertToDto(movie);
+    }
+
+    private Movie getMovieById(Integer movieId) {
+        return movieRepository.findMovieByIdAndIsDeleted(movieId, Boolean.FALSE)
+                .orElseThrow(()-> new MovieNotFoundException(
+                        String.format(AppConstants.MOVIE_NOT_FOUND_WITH_ID_MSG, movieId)));
     }
 
     private MovieDto convertToDto(Movie movie) {
@@ -112,8 +117,7 @@ public class MovieServiceImpl implements MovieService{
 
     @Override
     public MovieDto update(MovieDto movieDto,  MultipartFile file) throws IOException {
-        Movie movie = movieRepository.findMovieByIdAndIsDeleted(movieDto.getId(), Boolean.FALSE)
-                .orElseThrow(()-> new MovieNotFoundException("Movie not found with id = " + movieDto.getId()));
+        Movie movie = getMovieById(movieDto.getId());
         MovieDto dto = convertToDto(movie);
 
         return addMovie(dto, file);
@@ -121,8 +125,7 @@ public class MovieServiceImpl implements MovieService{
 
     @Override
     public void deleteById(Integer movieId) throws IOException {
-        Movie movie = movieRepository.findMovieByIdAndIsDeleted(movieId, Boolean.FALSE)
-                .orElseThrow(()-> new MovieNotFoundException("Movie not found with id = " + movieId));
+        Movie movie = getMovieById(movieId);
 
         MovieDto movieDto = convertToDto(movie);
         movieDto.setIsDeleted(true);
@@ -140,6 +143,6 @@ public class MovieServiceImpl implements MovieService{
 
         savedMovies.forEach(movie -> log.info("Movie saved with id {}", movie.getId()));
 
-        return convertToDto(savedMovies.get(0));
+        return convertToDto(savedMovies.getFirst());
     }
 }
